src-ken&y/objects/Recurring_Template__c.object
<CustomObject>
    <customHelpPage>HelpRecurringTemplates</customHelpPage>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Recurring Templates</relationshipLabel>
        <relationshipName>Recurring_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Recurring Template Currency</relationshipLabel>
        <relationshipName>Recurring_Template_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The period in which this recurring template stops creating journal entries.</description>
        <inlineHelpText>The period in which this recurring template stops creating journal entries.</inlineHelpText>
        <label>End Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Period__c.Closed__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Period__c.Permanently_Closed__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Recurring Templates (End Period)</relationshipLabel>
        <relationshipName>Recurring_Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi Weekly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Beginning of Period</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Middle of Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>OR(
Exceptions_Count__c &gt; 0,
Line_Exceptions__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Exceptions__c</fullName>
        <description>Lines on this recurring template that have exceptions.</description>
        <inlineHelpText>The line number in this recurring template that generated an exception.</inlineHelpText>
        <label>Line Exceptions</label>
        <summaryFilterItems>
            <field>Recurring_Template_Line__c.Has_Exceptions__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Recurring_Template_Line__c.Recurring_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring_Transaction_Start_Date__c</fullName>
        <description>The date you want your first transaction to occur.</description>
        <inlineHelpText>The date you want your first transaction to occur.</inlineHelpText>
        <label>Recurring Transaction Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The period in which this recurring template begins creating journal entries.</description>
        <inlineHelpText>The period in which this recurring template begins creating journal entries.</inlineHelpText>
        <label>Start Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Period__c.Closed__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Period__c.Permanently_Closed__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Recurring Templates</relationshipLabel>
        <relationshipName>Recurring_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_End_Date__c</fullName>
        <label>Template End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Credit__c</fullName>
        <label>Total Credit</label>
        <summarizedField>Recurring_Template_Line__c.Amount_CR__c</summarizedField>
        <summaryForeignKey>Recurring_Template_Line__c.Recurring_Template__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Debit__c</fullName>
        <label>Total Debit</label>
        <summarizedField>Recurring_Template_Line__c.Amount_DR__c</summarizedField>
        <summaryForeignKey>Recurring_Template_Line__c.Recurring_Template__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Lines__c</fullName>
        <label>Total Number Of Lines</label>
        <summaryForeignKey>Recurring_Template_Line__c.Recurring_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Journal Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isJECreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isJECreated</label>
        <type>Checkbox</type>
    </fields>
    <label>Recurring Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Company__c</columns>
        <columns>Start_Period__c</columns>
        <columns>End_Period__c</columns>
        <columns>Frequency__c</columns>
        <columns>Recurring_Transaction_Start_Date__c</columns>
        <columns>Transaction_Currency__c</columns>
        <columns>Template_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recurring Template</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Period_Validation</fullName>
        <active>true</active>
        <description>End period&apos;s period start can not be less than the Start period&apos;s period start.</description>
        <errorConditionFormula>End_Period__r.Period_Start__c &lt;  Start_Period__r.Period_Start__c</errorConditionFormula>
        <errorDisplayField>End_Period__c</errorDisplayField>
        <errorMessage>End period can not be prior to the Start period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recurring_Trans_Start_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Recurring_Transaction_Start_Date__c &lt;  Start_Period__r.Period_Start__c</errorConditionFormula>
        <errorDisplayField>Recurring_Transaction_Start_Date__c</errorDisplayField>
        <errorMessage>Recurring transaction start date can not be less that the start period&apos;s beginning..</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Period_Validation</fullName>
        <active>true</active>
        <description>Validate if the start period selected has the cut off passed.</description>
        <errorConditionFormula>IF(CreatedDate == null, Start_Period__r.JE_Cutoff__c &lt; now(), Start_Period__r.JE_Cutoff__c &lt; CreatedDate)</errorConditionFormula>
        <errorDisplayField>Start_Period__c</errorDisplayField>
        <errorMessage>Template start period&apos;s period cut off is passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Check</fullName>
        <active>true</active>
        <errorConditionFormula>(Total_Number_Of_Lines__c == 0 &amp;&amp;
ISPICKVAL(Status__c, &apos;Active&apos;)) ||
Total_Number_Of_Lines__c == 0 &amp;&amp;
ISPICKVAL(Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>Template should be in Draft status when no template lines created.</errorMessage>
    </validationRules>
</CustomObject>